--- a/personalWorkTime/personalWorkTime.phtml
+++ b/personalWorkTime/personalWorkTime.phtml
@@ -2,6 +2,7 @@
 $workdata = $model->getWorkData();
 $restdata = $model->getRestData();
 $position = $model->getPosition();
+$statusinfo = $model->getStatus();
 ?>
 <!DOCTYPE html>
 <html lang="ja">
@@ -64,6 +65,8 @@ $position = $model->getPosition();
 
 		//オンロードさせ、リロード時に選択を保持
 		window.onload = formChange;
+
+
 		</script>
 		<title>勤務時間表(個人)画面</title>
 	</head>
@@ -142,7 +145,6 @@ $position = $model->getPosition();
 										<option value="fifth">5</option>
 									</select>
 								</td>
-								</td>
 
 							<!--表示非表示の切り替え　日時-->
 								<td id="formDay">
@@ -181,7 +183,9 @@ $position = $model->getPosition();
 									<td>休憩時間</td><td>実働時間</td><td>ステータス</td><td>備考欄</td>
 								</tr>
 
-								<?php for($i=0;$i<count($workdata); $i++){
+								<?php
+									$s=0;
+									for($i=0;$i<count($workdata); $i++){
 									$datetime = new DateTime($workdata[$i][0]);
 									$week = array('日','月','火','水','木','金','土');
 									$w = (int)$datetime->format('w');
@@ -202,7 +206,7 @@ $position = $model->getPosition();
 											 			if($position['p-name'] != 'セミナー'){
 									?>
 
-														<td><?=$restdata[$j]['resttime']/3600?>一般</td>
+														<td><?=$restdata[$j]['resttime']/3600?></td>
 
 									<?php
 														break;
@@ -211,7 +215,7 @@ $position = $model->getPosition();
 
 									<?php 			}else{
 														if($position['p-name'] == 'セミナー'){?>
-															<td><?=$restdata[$j]['resttime']/3600?>セミナー</td>
+															<td><?=$restdata[$j]['resttime']/3600?></td>
 									<?php
 															break;
 														}
@@ -222,22 +226,39 @@ $position = $model->getPosition();
 
 										<td><?=($workdata[$i][3]-$restdata[$j]['resttime'])/3600?></td>
 									<?php }?>
+									<?php if($workdata[$i][0] == $statusinfo[$s][0]){
+										$status = $statusinfo[$s][1]?>
+										<td>
+											<select name="status">
+												<option value="1"<?php if($status == 1){echo ' selected';}?>>代休</option>
+												<option value="2"<?php if($status == 2){echo ' selected';}?>>代出</option>
+												<option value="3"<?php if($status == 3){echo ' selected';}?>>休み</option>
+												<option value="4"<?php if($status == 4){echo ' selected';}?>>早退</option>
+												<option value="5"<?php if($status == 5){echo ' selected';}?>>遅番</option>
+												<option value="6"<?php if($status == 6){echo ' selected';}?>>なし</option>
+											</select>
+										</td>
+									<?php }else{?>
+										<td></td>
+									<?php
+										}
 
-									<td>
-										<select name="status">
-											<option value="1">代休</option>
-											<option value="2">代出</option>
-											<option value="3">休み</option>
-											<option value="4">早退</option>
-											<option value="5">遅番</option>
-											<option value="6" selected>なし</option>
-										</select>
-									</td>
-									<td><textarea name="memo" rows="1" cols="15"></textarea></td>
-
+									if($workdata[$i][0] == $statusinfo[$s][0]){
+										$memo = $statusinfo[$s][3];
+										?>
+										<td><textarea name="memo" rows="1" cols="15"><?=$memo?></textarea></td>
+									<?php
+										if($s != count($statusinfo)-1){
+											$s++;
+										}
+									}else{
+									?>
+										<td></td>
+									<?php
+										}
+									?>
 								</tr>
 								<?php
-
 								}
 								?>
 						</table>
