--- a/mainMenu/mainMenu.phtml
+++ b/mainMenu/mainMenu.phtml
@@ -10,7 +10,9 @@
 		<script src="../script/logout.js"></script>
 		<script src="../script/tabMenu.js"></script>
 		<script src="../script/accordion.js"></script>
+		<?php if($_SESSION["userinfo"]["authority"] == 2){?>
 		<script src="../script/mainMenu-dialog.js"></script>
+		<?php }?>
 		<script>
 
 		/*
@@ -26,8 +28,50 @@
 	    	} );
 		} );
 
+		</script>
+		<?php if($_SESSION['userinfo']['authority'] == 1){?>
+
+		<script type="text/javascript">
+
+		$(function(){
+
+			$.ajax({
+				type: 'POST',
+				url:'mainMenu.php',
+				data:{
+				"checkid": "<?php echo $_SESSION['userinfo']['accountid']?>",
+				"searchwork": "checkWorktime"
+
+			},
+			success:function(data) {
+
+				//checkWorkTimeに戻り値を返却
+				var checkWorkTime = JSON.parse(data);
+
+				//出勤登録処理の実行可否判定
+
+					$("#attendance").prop("disabled", checkWorkTime[0]);
+
+				//退勤登録処理の実行可否判定
+
+					if(checkWorkTime[1]){
+						$("#clockout").prop("disabled",false);
+					}else{
+						$("#clockout").prop("disabled",true);
+					}
+
+				console.log(checkWorkTime[0]);
+				console.log(checkWorkTime[1]);
+			},
+			error:function(XMLHttpRequest, textStatus, errorThrown) {
+
+			}
+			});
+
+		});
 
 		</script>
+		<?php }?>
 
 		<title>メインメニュー画面</title>
 	</head>
@@ -54,35 +98,63 @@
 			</div>
 
 			<div class="box menu"><!-- ヘッダーメニュー-->
-				<ul id="dropmenu">
-	 				<li><a href="">メニュー</a>
-	   			 		<ul>
-	    				</ul>
-	 				 </li>
-	  				<li><a href="../overallWorkTime/overallWorkTime.php">勤務時間表</a>
-	   					<ul>
-	   					</ul>
-	 				</li>
-	 				<li><a href="../settingHoliday/settingHoliday.php">休日設定</a>
-	    				<ul>
-	   					</ul>
-	 				</li>
-	  				<li><a href="#">ユーザー設定</a>
-	   					<ul>
-	     					<li><a href="../updateUser/updateUser.php">ユーザー設定変更</a></li>
-	     					<li><a href="../insertUser/insertUser.php">ユーザー登録</a></li>
-	   					</ul>
-	  				</li>
-	  				<li><a href="../settingRestTime/settingRestTime.php">休憩時間設定</a>
-	   					<ul>
-	   					</ul>
-	  				</li>
-				</ul>
+				<?php if($_SESSION["userinfo"]["authority"] == 2){?>
+					<ul id="dropmenu">
+		 				<li><a href="">メニュー</a>
+		   			 		<ul>
+		    				</ul>
+		 				 </li>
+		  				<li><a href="../overallWorkTime/overallWorkTime.php">勤務時間表</a>
+		   					<ul>
+		   					</ul>
+		 				</li>
+		 				<li><a href="../settingHoliday/settingHoliday.php">休日設定</a>
+		    				<ul>
+		   					</ul>
+		 				</li>
+		  				<li><a href="#">ユーザー設定</a>
+		   					<ul>
+		     					<li><a href="../updateUser/updateUser.php">ユーザー設定変更</a></li>
+		     					<li><a href="../insertUser/insertUser.php">ユーザー登録</a></li>
+		   					</ul>
+		  				</li>
+		  				<li><a href="../settingRestTime/settingRestTime.php">休憩時間設定</a>
+		   					<ul>
+		   					</ul>
+		  				</li>
+					</ul>
+				<?php }else{?>
+					<ul id="dropmenu">
+		 				<li style="width:50%"><a href="">メニュー</a>
+		   			 		<ul>
+		    				</ul>
+		 				 </li>
+		  				<li style="width:50%">
+		  					<a href="../personalWorkTime/personalWorkTime.php?accountid=<?php $_SESSION["userinfo"]["accountid"];?>">
+		  						勤務時間表
+		  					</a>
+		   					<ul>
+		   					</ul>
+		 				</li>
+					</ul>
+				<?php }?>
 			</div>
 
 			<div class="box main-container mainMenuCalendar clearfix">
 				<br>
 				<br>
+
+				<?php if($_SESSION['userinfo']['authority'] == 1){?>
+					<div align="center">
+
+						<form action="" method="POST">
+							<input type="submit" name="attendance" id="attendance" value="出勤">
+							<input type="submit" name="clockout" id="clockout" value="退勤">
+							<input type="hidden" name="accountid" value=<?php echo $_SESSION['userinfo']['accountid'];?>>
+						</form>
+
+					</div>
+				<?php }?>
 
 				<div id="jquery-ui-tabs">
     				<ul>
@@ -94,7 +166,7 @@
         				</form>
     				</ul>
 
-
+						<?php if($_SESSION["userinfo"]["authority"] == 2){?>
 						<dl id="acMenu">
 							<dt>曜日一括設定</dt>
 								<dd>
@@ -223,6 +295,7 @@
 							</dd>
 
 						</dl>
+						<?php }?>
 
 					<?php
 						for($i=0; $i < count($model->getYear());$i++):
@@ -364,7 +437,7 @@
 			</div><!-- box main-container  -->
 
 
-
+<?php if($_SESSION["userinfo"]["authority"] == 2){?>
 <div id="jquery-ui-dialog" title="勤務登録">
     <form method="post" id="insertForm">
     <fieldset>
@@ -472,6 +545,7 @@
         <input type="hidden" name="day2" id="day2">
     </form>
 </div>
+<?php }?>
 
 			<footer class="box footer">
 				<p>Copyright © 2010-2015 FusionOne Co.,Ltd. All Rights Reserved.</p>
