--- a/mainMenu/mainMenu.phtml
+++ b/mainMenu/mainMenu.phtml
@@ -130,7 +130,7 @@
 		    				</ul>
 		 				 </li>
 		  				<li style="width:50%">
-		  					<a href="../personalWorkTime/personalWorkTime.php?accountid=<?php $_SESSION["userinfo"]["accountid"];?>">
+		  					<a href="../personalWorkTime/personalWorkTime.php?accountid=<?php echo $_SESSION["userinfo"]["accountid"];?>">
 		  						勤務時間表
 		  					</a>
 		   					<ul>
