--- a/overallWorkTime/overallWorkTime.phtml
+++ b/overallWorkTime/overallWorkTime.phtml
@@ -90,14 +90,17 @@
 
 							<!--表示非表示の切り替え　週次-->
 								<td id="formWeek">
-									<input type="motnth" name="week[]">
+									<input type="month" name="week[]">
+									 第
 									<select name="week[]">
-										<option value="first">1</option>
-										<option value="second">2</option>
-										<option value="third">3</option>
-										<option value="foruth">4</option>
-										<option value="fifth">5</option>
+										<option value="1">1</option>
+										<option value="2">2</option>
+										<option value="3">3</option>
+										<option value="4">4</option>
+										<option value="5">5</option>
+										<option value="6">6</option>
 									</select>
+									 週
 								</td>
 								</td>
 
