--- a/mainMenu/mainMenu.phtml
+++ b/mainMenu/mainMenu.phtml
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="../jquery/jquery-ui.css">
 		<script src="../jquery/jquery-1.11.3.min.js"></script>
 		<script src="../jquery/jquery-ui.js"></script>
+		<script src="../jquery/datepicker-ja.js"></script>
 		<script src="../script/logout.js"></script>
 		<script src="../script/tabMenu.js"></script>
 		<script src="../script/accordion.js"></script>
@@ -27,6 +28,15 @@
 	        	active: <?php echo $model->getDispMonth();?>,
 	    	} );
 		} );
+
+
+		  $(function() {
+
+				  $("#datepicker").datepicker();
+				  $("#datepicker").datepicker("option", "showOn", 'button');
+
+		  });
+
 
 		</script>
 
@@ -313,21 +323,10 @@
 		    							<?php foreach ($model->getSelCalendar($j) as $key => $value): ?>
 
 										<?php
-
-
-
-											//土日の色を変更する
-
-		        							if($cnt == 6){
-												$fontcolor="red";
-		    								}else if($cnt == 5){
-												$fontcolor="blue";
-		    								}else{
-		    									$fontcolor="#000000";
-		    								}
+											$class = $model->setDateClass($model->getSelYear($j),$model->getSelMonth($j),$value['day']);
 				        				?>
 
-										<td style="background-color: <?php echo $model->getSelCalenderColor($j,$key,"code");?>; color:<?php echo $fontcolor;?>;">
+										<td class="<?php echo $class;?>">
 				        					<?php $cnt++; ?>
 
 				        					<div class="day-calendar" data-year="<?php echo $model->getSelYear($j);?>" data-month="<?php echo $model->getSelMonth($j);?>" data-day="<?php echo $value['day']; ?>">
@@ -465,6 +464,10 @@
     <form>
     <fieldset>
         <p class="changename"></p>
+        <p>
+        	<label for="jquery-ui-dialog-form-date2">出勤日</label>
+        	<input type="text" name="updateDate" id="datepicker" value="">
+        </p>
         <p>
             <label for="jquery-ui-dialog-form-hour2">出勤時間</label>
             <select name="jquery-ui-dialog-form-hour2" id="jquery-ui-dialog-form-hour2" class="text ui-widget-content ui-corner-all" />
