--- a/css/content.css
+++ b/css/content.css
@@ -174,7 +174,7 @@ div#glayLayer {
 	padding-bottom: 3px;
 }
 
-.worksheet .record {
+.record {
 	background: #d2d2d2;
 }
 
@@ -195,6 +195,10 @@ div#glayLayer {
 	margin-right: 18%;
 }
 
+.sum th{
+	width: 100px;
+	padding-top: 5px;
+}
 /*
 エラー画面用CSS
 作成者：水島創太
