--- a/mainMenu/mainMenu.phtml
+++ b/mainMenu/mainMenu.phtml
@@ -370,7 +370,7 @@
 		    								}
 				        				?>
 
-										<td style="background-color: <?php echo $model->getSelCalenderColor($j,$key,"code");?>; color:<?php echo $fontcolor;?>;">
+										<td class="<?php echo $model->getYoubi($value['youbi']); ?>" style="background-color: <?php echo $model->getSelCalenderColor($j,$key,"code");?>; color:<?php echo $fontcolor;?>;">
 				        					<?php $cnt++; ?>
 
 				        					<div class="day-calendar" data-year="<?php echo $model->getSelYear($j);?>" data-month="<?php echo $model->getSelMonth($j);?>" data-day="<?php echo $value['day']; ?>">
